--- a/docker-envs/alerts.env
+++ b/docker-envs/alerts.env
@@ -8,11 +8,11 @@ ch_port_http="8123"
 ch_username="default"
 ch_password=""
 pg_user="postgres"
-pg_password="${COMMON_PG_PASSWORD}"
-SITE_URL="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
-S3_HOST="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
-S3_KEY="${COMMON_S3_KEY}"
-S3_SECRET="${COMMON_S3_SECRET}"
+pg_password="31695d7b59ea0665ee62"
+SITE_URL="https://open.eltech.cloud"
+S3_HOST="https://open.eltech.cloud"
+S3_KEY="237a82ece114fb4e96df"
+S3_SECRET="3261a5fe9f7408a2870c"
 AWS_DEFAULT_REGION="us-east-1"
 EMAIL_HOST=""
 EMAIL_PORT="587"
