--- a/docker-envs/assets.env
+++ b/docker-envs/assets.env
@@ -1,10 +1,10 @@
-AWS_ACCESS_KEY_ID="${COMMON_S3_KEY}"
-AWS_SECRET_ACCESS_KEY="${COMMON_S3_SECRET}"
+AWS_ACCESS_KEY_ID="237a82ece114fb4e96df"
+AWS_SECRET_ACCESS_KEY="3261a5fe9f7408a2870c"
 BUCKET_NAME="sessions-assets"
 LICENSE_KEY=""
-AWS_ENDPOINT="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
+AWS_ENDPOINT="https://open.eltech.cloud"
 AWS_REGION="us-east-1"
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-ASSETS_ORIGIN="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}/sessions-assets"
+ASSETS_ORIGIN="https://open.eltech.cloud/sessions-assets"
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
