--- a/docker-envs/assist.env
+++ b/docker-envs/assist.env
@@ -1,9 +1,9 @@
-ASSIST_JWT_SECRET="${COMMON_ASSIST_JWT_SECRET}"
-ASSIST_KEY="${COMMON_ASSIST_KEY}"
+ASSIST_JWT_SECRET="8686044cfaa51523bc55"
+ASSIST_KEY="d936bb5e42131f882264"
 AWS_DEFAULT_REGION="us-east-1"
-S3_HOST="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}:80"
-S3_KEY="${COMMON_S3_KEY}"
-S3_SECRET="${COMMON_S3_SECRET}"
+S3_HOST="https://open.eltech.cloud"
+S3_KEY="237a82ece114fb4e96df"
+S3_SECRET="3261a5fe9f7408a2870c"
 REDIS_URL="redis-master.db.svc.cluster.local"
 CLEAR_SOCKET_TIME="720"
 debug="0"
