--- a/docker-envs/sourcemapreader.env
+++ b/docker-envs/sourcemapreader.env
@@ -1,11 +1,11 @@
 SMR_HOST="0.0.0.0"
 S3_HOST="http://minio.db.svc.cluster.local:9000"
-S3_KEY="${COMMON_S3_KEY}"
-S3_SECRET="${COMMON_S3_SECRET}"
+S3_KEY="237a82ece114fb4e96df"
+S3_SECRET="3261a5fe9f7408a2870c"
 AWS_REGION="us-east-1"
 LICENSE_KEY=""
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-POSTGRES_STRING="postgres://postgres:${COMMON_PG_PASSWORD}@postgresql.db.svc.cluster.local:5432/postgres"
-ASSETS_ORIGIN="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}/sessions-assets"
+POSTGRES_STRING="postgres://postgres:31695d7b59ea0665ee62@postgresql.db.svc.cluster.local:5432/postgres"
+ASSETS_ORIGIN="https://open.eltech.cloud/sessions-assets"
