--- a/docker-envs/analytics.env
+++ b/docker-envs/analytics.env
@@ -2,10 +2,10 @@ TOKEN_SECRET="secret_token_string"
 LICENSE_KEY=""
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-JWT_SECRET="${COMMON_JWT_SECRET}"
+JWT_SECRET="c5289cf107d98731d182"
 CH_USERNAME="default"
 CH_PASSWORD=""
 CLICKHOUSE_STRING="clickhouse-openreplay-clickhouse.db.svc.cluster.local:9000/"
-pg_password="${COMMON_PG_PASSWORD}"
-POSTGRES_STRING="postgres://postgres:${COMMON_PG_PASSWORD}@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
+pg_password=31695d7b59ea0665ee62
+POSTGRES_STRING="postgres://postgres:31695d7b59ea0665ee62@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
