--- a/docker-envs/ender.env
+++ b/docker-envs/ender.env
@@ -1,6 +1,6 @@
 LICENSE_KEY=""
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-pg_password="${COMMON_PG_PASSWORD}"
-POSTGRES_STRING="postgres://postgres:${COMMON_PG_PASSWORD}@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
+pg_password=31695d7b59ea0665ee62
+POSTGRES_STRING="postgres://postgres:31695d7b59ea0665ee62@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
