--- a/docker-envs/images.env
+++ b/docker-envs/images.env
@@ -1,6 +1,6 @@
-AWS_ACCESS_KEY_ID="${COMMON_S3_KEY}"
-AWS_SECRET_ACCESS_KEY="${COMMON_S3_SECRET}"
-AWS_ENDPOINT="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
+AWS_ACCESS_KEY_ID="237a82ece114fb4e96df"
+AWS_SECRET_ACCESS_KEY="3261a5fe9f7408a2870c"
+AWS_ENDPOINT="https://open.eltech.cloud"
 AWS_REGION="us-east-1"
 BUCKET_NAME="mobs"
 LICENSE_KEY=""
