--- a/docker-envs/integrations.env
+++ b/docker-envs/integrations.env
@@ -1,13 +1,13 @@
-AWS_ACCESS_KEY_ID="${COMMON_S3_KEY}"
-AWS_SECRET_ACCESS_KEY="${COMMON_S3_SECRET}"
-AWS_ENDPOINT="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
+AWS_ACCESS_KEY_ID="237a82ece114fb4e96df"
+AWS_SECRET_ACCESS_KEY="3261a5fe9f7408a2870c"
+AWS_ENDPOINT="https://open.eltech.cloud"
 AWS_REGION="us-east-1"
 BUCKET_NAME="mobs"
-JWT_SECRET="${COMMON_JWT_SECRET}"
+JWT_SECRET="c5289cf107d98731d182"
 LICENSE_KEY=""
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-pg_password="${COMMON_PG_PASSWORD}"
-POSTGRES_STRING="postgres://postgres:${COMMON_PG_PASSWORD}@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
+pg_password="31695d7b59ea0665ee62"
+POSTGRES_STRING="postgres://postgres:31695d7b59ea0665ee62@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
 TOKEN_SECRET="secret_token_string"
