--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,24 @@
-version: '3.9'
+
+# vim: ft=yaml
+version: '3'
 
 services:
 
   postgresql:
-    image: bitnami/postgresql:17.2.0
-    environment:
-      POSTGRES_PASSWORD: "31695d7b59ea0665ee62"
+    image: postgres:17.2-alpine3.21
+    container_name: postgres
     volumes:
-      - pgdata:/bitnami/postgresql
+      - pgdata:/var/lib/postgresql/data
     networks:
       openreplay-net:
         aliases:
           - postgresql.db.svc.cluster.local
-    deploy:
-      restart_policy:
-        condition: on-failure
+    environment:
+      POSTGRESQL_PASSWORD: "${COMMON_PG_PASSWORD}"
 
   clickhouse:
-    image: clickhouse/clickhouse-server:25.1-alpine
+    image: clickhouse/clickhouse-server:${CLICKHOUSE_VERSION}
+    container_name: clickhouse
     volumes:
       - clickhouse:/var/lib/clickhouse
     networks:
@@ -25,29 +26,24 @@ services:
         aliases:
           - clickhouse-openreplay-clickhouse.db.svc.cluster.local
     environment:
-      CLICKHOUSE_USER: default
+      CLICKHOUSE_USER: "default"
       CLICKHOUSE_PASSWORD: ""
       CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: "1"
-    deploy:
-      restart_policy:
-        condition: on-failure
 
   redis:
-    image: redis:7-alpine
-    command: ["redis-server", "--appendonly", "yes"]
+    image: redis:6.0.12-alpine
+    container_name: redis
     volumes:
       - redisdata:/data
     networks:
       openreplay-net:
         aliases:
           - redis-master.db.svc.cluster.local
-    deploy:
-      restart_policy:
-        condition: on-failure
+    command: ["redis-server", "--appendonly", "yes", "--requirepass", ""]
 
   minio:
     image: minio/minio:latest
-    command: server /data --console-address ":9001"
+    container_name: minio
     volumes:
       - miniodata:/data
     networks:
@@ -55,63 +51,122 @@ services:
         aliases:
           - minio.db.svc.cluster.local
     ports:
-      - target: 9001
-        published: 9001
-        protocol: tcp
-        mode: host
+      - 9001:9001
+    command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: ${COMMON_S3_KEY}
       MINIO_ROOT_PASSWORD: ${COMMON_S3_SECRET}
-    deploy:
-      restart_policy:
-        condition: on-failure
 
-  # ===== MIGRATIONS =====
+  fs-permission:
+    image: debian:stable-slim
+    container_name: fs-permission
+    profiles:
+      - "migration"
+    volumes:
+      - shared-volume:/mnt/efs
+      - miniodata:/mnt/minio
+      - pgdata:/mnt/postgres
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+        chown -R 1001:1001 /mnt/{efs,minio,postgres}
+    restart: on-failure
 
-  db-migration:
-    image: bitnami/postgresql:14.5.0
+  minio-migration:
+    image: ubuntu:22.04
+    container_name: minio-migration
+    profiles:
+      - "migration"
     depends_on:
-      - postgresql
       - minio
+      - fs-permission
     networks:
       - openreplay-net
     volumes:
-      - ../schema/db/init_dbs/postgresql/init_schema.sql:/tmp/init_schema.sql
+      - ./minio.sh:/tmp/minio.sh
+    environment:
+      MINIO_HOST: http://minio.db.svc.cluster.local:9000
+      MINIO_ACCESS_KEY: ${COMMON_S3_KEY}
+      MINIO_SECRET_KEY: ${COMMON_S3_SECRET}
+    user: root
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+          apt update && apt install netcat -y
+          # Wait for Minio to be ready
+          until nc -z -v -w30 minio 9000; do
+              echo "Waiting for Minio server to be ready..."
+              sleep 1
+          done
+          bash /tmp/minio.sh init || exit 100
+
+  db-migration:
+    image: postgres:17.2-alpine3.21
+    container_name: db-migration
+    profiles:
+      - "migration"
+    depends_on:
+      - postgresql
+      - minio-migration
+    networks:
+      - openreplay-net
+    volumes:
+      - ./init_schema.sql:/tmp/init_schema.sql
     environment:
       PGHOST: postgresql
       PGPORT: 5432
       PGDATABASE: postgres
       PGUSER: postgres
-      PGPASSWORD: 31695d7b59ea0665ee62
-    entrypoint: >
-      sh -c "until pg_isready -h postgresql -p 5432; do
-        echo 'Postgres not ready, waiting...'; sleep 1;
-      done;
-      psql -h postgresql -U postgres -d postgres -f /tmp/init_schema.sql"
-    deploy:
-      restart_policy:
-        condition: on-failure
+      PGPASSWORD: ${COMMON_PG_PASSWORD}
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+          until psql -c '\q'; do
+          echo "PostgreSQL is unavailable - sleeping"
+          sleep 1
+          done
+          echo "PostgreSQL is up - executing command"
+          psql -v ON_ERROR_STOP=1 -f /tmp/init_schema.sql
 
   clickhouse-migration:
-    image: clickhouse/clickhouse-client:25.1-alpine
+    image: clickhouse/clickhouse-server:${CLICKHOUSE_VERSION}
+    container_name: clickhouse-migration
+    profiles:
+      - "migration"
     depends_on:
       - clickhouse
-      - minio
+      - minio-migration
     networks:
       - openreplay-net
     volumes:
-      - ../schema/db/init_dbs/clickhouse/create/init_schema.sql:/tmp/init_schema.sql
-    entrypoint: >
-      sh -c "until nc -z clickhouse-openreplay-clickhouse.db.svc.cluster.local 9000; do
-        echo 'Waiting for Clickhouse...'; sleep 1;
-      done;
-      clickhouse-client -h clickhouse-openreplay-clickhouse.db.svc.cluster.local --multiquery < /tmp/init_schema.sql || true"
-    deploy:
-      restart_policy:
-        condition: on-failure
+      - ./init_schema_click.sql:/tmp/init_schema.sql
+    environment:
+      CH_HOST: "clickhouse-openreplay-clickhouse.db.svc.cluster.local"
+      CH_PORT: "9000"
+      CH_PORT_HTTP: "8123"
+      CH_USERNAME: "default"
+      CH_PASSWORD: ""
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+          # Checking variable is empty. Shell independant method.
+          # Wait for Minio to be ready
+          until nc -z -v -w30 clickhouse-openreplay-clickhouse.db.svc.cluster.local 9000; do
+              echo "Waiting for Minio server to be ready..."
+              sleep 1
+          done
 
+          echo "clickhouse is up - executing command"
+          clickhouse-client -h clickhouse-openreplay-clickhouse.db.svc.cluster.local --user default --port 9000 --multiquery < /tmp/init_schema.sql || true
+  
   alerts-openreplay:
-    image: public.ecr.aws/p1t3u8a3/alerts:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/alerts:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: alerts
     networks:
       openreplay-net:
         aliases:
@@ -121,12 +176,14 @@ services:
       - shared-volume:/mnt/efs
     env_file:
       - docker-envs/alerts.env
-    deploy:
-      restart_policy:
-        condition: any
-
+    environment: {}  # Fallback empty environment if env_file is missing
+    restart: unless-stopped
+  
+  
   analytics-openreplay:
-    image: public.ecr.aws/p1t3u8a3/analytics:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/analytics:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: analytics
     networks:
       openreplay-net:
         aliases:
@@ -136,12 +193,14 @@ services:
       - shared-volume:/mnt/efs
     env_file:
       - docker-envs/analytics.env
-    deploy:
-      restart_policy:
-        condition: any
-
+    environment: {}  # Fallback empty environment if env_file is missing
+    restart: unless-stopped
+  
+  
   http-openreplay:
-    image: public.ecr.aws/p1t3u8a3/http:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/http:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: http
     networks:
       openreplay-net:
         aliases:
@@ -152,14 +211,13 @@ services:
     env_file:
       - docker-envs/http.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
-
+    restart: unless-stopped
   
   
   images-openreplay:
-    image: public.ecr.aws/p1t3u8a3/images:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/images:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: images
     networks:
       openreplay-net:
         aliases:
@@ -170,13 +228,13 @@ services:
     env_file:
       - docker-envs/images.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   integrations-openreplay:
-    image: public.ecr.aws/p1t3u8a3/integrations:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/integrations:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: integrations
     networks:
       openreplay-net:
         aliases:
@@ -187,13 +245,13 @@ services:
     env_file:
       - docker-envs/integrations.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   sink-openreplay:
-    image: public.ecr.aws/p1t3u8a3/sink:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/sink:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: sink
     networks:
       openreplay-net:
         aliases:
@@ -204,13 +262,13 @@ services:
     env_file:
       - docker-envs/sink.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   sourcemapreader-openreplay:
-    image: public.ecr.aws/p1t3u8a3/sourcemapreader:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/sourcemapreader:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: sourcemapreader
     networks:
       openreplay-net:
         aliases:
@@ -221,13 +279,13 @@ services:
     env_file:
       - docker-envs/sourcemapreader.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   spot-openreplay:
-    image: public.ecr.aws/p1t3u8a3/spot:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/spot:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: spot
     networks:
       openreplay-net:
         aliases:
@@ -238,13 +296,13 @@ services:
     env_file:
       - docker-envs/spot.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   storage-openreplay:
-    image: public.ecr.aws/p1t3u8a3/storage:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/storage:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: storage
     networks:
       openreplay-net:
         aliases:
@@ -255,13 +313,13 @@ services:
     env_file:
       - docker-envs/storage.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   assets-openreplay:
-    image: public.ecr.aws/p1t3u8a3/assets:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/assets:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: assets
     networks:
       openreplay-net:
         aliases:
@@ -272,13 +330,13 @@ services:
     env_file:
       - docker-envs/assets.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   assist-openreplay:
-    image: public.ecr.aws/p1t3u8a3/assist:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/assist:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: assist
     networks:
       openreplay-net:
         aliases:
@@ -289,13 +347,13 @@ services:
     env_file:
       - docker-envs/assist.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   canvases-openreplay:
-    image: public.ecr.aws/p1t3u8a3/canvases:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/canvases:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: canvases
     networks:
       openreplay-net:
         aliases:
@@ -306,13 +364,13 @@ services:
     env_file:
       - docker-envs/canvases.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   chalice-openreplay:
-    image: public.ecr.aws/p1t3u8a3/chalice:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/chalice:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: chalice
     networks:
       openreplay-net:
         aliases:
@@ -323,12 +381,13 @@ services:
     env_file:
       - docker-envs/chalice.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any    
+    restart: unless-stopped
+  
   
   db-openreplay:
-    image: public.ecr.aws/p1t3u8a3/db:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/db:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: db
     networks:
       openreplay-net:
         aliases:
@@ -339,13 +398,13 @@ services:
     env_file:
       - docker-envs/db.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   ender-openreplay:
-    image: public.ecr.aws/p1t3u8a3/ender:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/ender:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: ender
     networks:
       openreplay-net:
         aliases:
@@ -356,13 +415,13 @@ services:
     env_file:
       - docker-envs/ender.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   frontend-openreplay:
-    image: public.ecr.aws/p1t3u8a3/frontend:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/frontend:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: frontend
     networks:
       openreplay-net:
         aliases:
@@ -373,13 +432,13 @@ services:
     env_file:
       - docker-envs/frontend.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
   
   
   heuristics-openreplay:
-    image: public.ecr.aws/p1t3u8a3/heuristics:v1.22.0
+    image: public.ecr.aws/p1t3u8a3/heuristics:${COMMON_VERSION}
+    domainname: app.svc.cluster.local
+    container_name: heuristics
     networks:
       openreplay-net:
         aliases:
@@ -390,31 +449,25 @@ services:
     env_file:
       - docker-envs/heuristics.env
     environment: {}  # Fallback empty environment if env_file is missing
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
+  
 
   nginx-openreplay:
     image: nginx:latest
+    container_name: nginx
     networks:
       - openreplay-net
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    deploy:
-      restart_policy:
-        condition: any
+    restart: unless-stopped
+
 
   caddy:
     image: caddy:latest
+    container_name: caddy
     ports:
-      - target: 80
-        published: 80
-        protocol: tcp
-        mode: host
-      - target: 443
-        published: 443
-        protocol: tcp
-        mode: host
+      - "80:80"
+      - "443:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
@@ -422,11 +475,10 @@ services:
     networks:
       - openreplay-net
     environment:
-      - ACME_AGREE=true
-      - CADDY_DOMAIN=open.eltech.cloud
-    deploy:
-      restart_policy:
-        condition: any
+      - ACME_AGREE=true # Agree to Let's Encrypt Subscriber Agreement
+      - CADDY_DOMAIN=${CADDY_DOMAIN}
+    restart: unless-stopped
+
 
 volumes:
   pgdata:
@@ -439,4 +491,3 @@ volumes:
 
 networks:
   openreplay-net:
-    driver: overlay
