--- a/common.env
+++ b/common.env
@@ -1,15 +1,15 @@
 COMMON_VERSION="v1.22.0"
 COMMON_PROTOCOL="https"
-COMMON_DOMAIN_NAME="open.eltech.cloud"
-COMMON_JWT_SECRET="c5289cf107d98731d182"
-COMMON_JWT_SPOT_SECRET="c5289cf107d98731d182"
-COMMON_S3_KEY="237a82ece114fb4e96df"
-COMMON_S3_SECRET="3261a5fe9f7408a2870c"
-COMMON_PG_PASSWORD="31695d7b59ea0665ee62"
-COMMON_JWT_REFRESH_SECRET="c5289cf107d98731d182_refresh"
-COMMON_JWT_SPOT_REFRESH_SECRET="c5289cf107d98731d182_spot_refresh"
-COMMON_ASSIST_JWT_SECRET="8686044cfaa51523bc55"
-COMMON_ASSIST_KEY="d936bb5e42131f882264"
+COMMON_DOMAIN_NAME="change_me_domain"
+COMMON_JWT_SECRET="change_me_jwt"
+COMMON_JWT_SPOT_SECRET="change_me_jwt"
+COMMON_S3_KEY="change_me_s3_key"
+COMMON_S3_SECRET="change_me_s3_secret"
+COMMON_PG_PASSWORD="change_me_pg_password"
+COMMON_JWT_REFRESH_SECRET="change_me_jwt_refresh"
+COMMON_JWT_SPOT_REFRESH_SECRET="change_me_jwt_spot_refresh"
+COMMON_ASSIST_JWT_SECRET="change_me_assist_jwt_secret"
+COMMON_ASSIST_KEY="change_me_assist_key"
 
 ## DB versions
 ######################################
@@ -18,4 +18,3 @@ REDIS_VERSION="6.0.12-debian-10-r33"
 MINIO_VERSION="2023.2.10-debian-11-r1"
 CLICKHOUSE_VERSION="25.1-alpine"
 ######################################
-CADDY_DOMAIN="open.eltech.cloud"
