--- a/docker-envs/chalice.env
+++ b/docker-envs/chalice.env
@@ -7,21 +7,21 @@ ch_port="9000"
 ch_port_http="8123"
 sourcemaps_reader="http://sourcemapreader-openreplay.app.svc.cluster.local:9000/%s/sourcemaps"
 ASSIST_URL="http://assist-openreplay.app.svc.cluster.local:9001/assist/%s"
-ASSIST_JWT_SECRET="8686044cfaa51523bc55"
-JWT_SECRET="c5289cf107d98731d182"
-JWT_SPOT_SECRET="c5289cf107d98731d182"
-ASSIST_KEY="d936bb5e42131f882264"
+ASSIST_JWT_SECRET="${COMMON_ASSIST_JWT_SECRET}"
+JWT_SECRET="${COMMON_JWT_SECRET}"
+JWT_SPOT_SECRET="${COMMON_JWT_SPOT_SECRET}"
+ASSIST_KEY="${COMMON_ASSIST_KEY}"
 LICENSE_KEY=""
 version_number="v1.22.0"
 pg_host="postgresql.db.svc.cluster.local"
 pg_port="5432"
 pg_dbname="postgres"
 pg_user="postgres"
-pg_password="31695d7b59ea0665ee62"
-SITE_URL="https://open.eltech.cloud"
-S3_HOST="https://open.eltech.cloud"
-S3_KEY="237a82ece114fb4e96df"
-S3_SECRET="3261a5fe9f7408a2870c"
+pg_password="${COMMON_PG_PASSWORD}"
+SITE_URL="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
+S3_HOST="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
+S3_KEY="${COMMON_S3_KEY}"
+S3_SECRET="${COMMON_S3_SECRET}"
 AWS_DEFAULT_REGION="us-east-1"
 sessions_region="us-east-1"
 ASSIST_RECORDS_BUCKET="records"
@@ -41,8 +41,8 @@ EMAIL_FROM="OpenReplay<do-not-reply@openreplay.com>"
 CH_COMPRESSION="false"
 CLUSTER_URL="svc.cluster.local"
 JWT_EXPIRATION="86400"
-JWT_REFRESH_SECRET="c5289cf107d98731d182_refresh"
-JWT_SPOT_REFRESH_SECRET="c5289cf107d98731d182_spot_refresh"
+JWT_REFRESH_SECRET="${COMMON_JWT_REFRESH_SECRET}"
+JWT_SPOT_REFRESH_SECRET="${COMMON_JWT_SPOT_REFRESH_SECRET}"
 LOGLEVEL="INFO"
 PYTHONUNBUFFERED="0"
 SAML2_MD_URL=""
