--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
         aliases:
           - postgresql.db.svc.cluster.local
     environment:
-      POSTGRESQL_PASSWORD: "${COMMON_PG_PASSWORD}"
+      POSTGRES_PASSWORD: "${COMMON_PG_PASSWORD}"
 
   clickhouse:
     image: clickhouse/clickhouse-server:${CLICKHOUSE_VERSION}
@@ -74,7 +74,7 @@ services:
     restart: on-failure
 
   minio-migration:
-    image: ubuntu:22.04
+    image: minio/mc:latest
     container_name: minio-migration
     profiles:
       - "migration"
@@ -91,15 +91,13 @@ services:
       MINIO_SECRET_KEY: ${COMMON_S3_SECRET}
     user: root
     entrypoint:
-      - /bin/bash
+      - /bin/sh
       - -c
       - |
-          apt update && apt install netcat -y
-          # Wait for Minio to be ready
-          until nc -z -v -w30 minio 9000; do
-              echo "Waiting for Minio server to be ready..."
-              sleep 1
-          done
+          echo 'Aguardando o MinIO ficar disponível...';
+          until (echo > /dev/tcp/minio/9000) 2>/dev/null; do
+            sleep 2;
+          done &&
           bash /tmp/minio.sh init || exit 100
 
   db-migration:
