--- a/docker-envs/db.env
+++ b/docker-envs/db.env
@@ -4,8 +4,8 @@ CLICKHOUSE_STRING="clickhouse-openreplay-clickhouse.db.svc.cluster.local:9000/de
 LICENSE_KEY=""
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-pg_password=31695d7b59ea0665ee62
+pg_password="${COMMON_PG_PASSWORD}"
 QUICKWIT_ENABLED="false"
-POSTGRES_STRING="postgres://postgres:31695d7b59ea0665ee62@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
+POSTGRES_STRING="postgres://postgres:${COMMON_PG_PASSWORD}@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
 ch_db="default"
