--- a/docker-envs/storage.env
+++ b/docker-envs/storage.env
@@ -1,16 +1,10 @@
-CACHE_ASSETS="true"
-FS_CLEAN_HRS="24"
-TOKEN_SECRET="secret_token_string"
-AWS_ACCESS_KEY_ID="237a82ece114fb4e96df"
-AWS_SECRET_ACCESS_KEY="3261a5fe9f7408a2870c"
-BUCKET_NAME="spots"
+AWS_ACCESS_KEY_ID="${COMMON_S3_KEY}"
+AWS_SECRET_ACCESS_KEY="${COMMON_S3_SECRET}"
+AWS_ENDPOINT="${COMMON_PROTOCOL}://${COMMON_DOMAIN_NAME}"
 AWS_REGION="us-east-1"
-AWS_ENDPOINT="https://open.eltech.cloud"
+BUCKET_NAME="mobs"
 LICENSE_KEY=""
 KAFKA_SERVERS="kafka.db.svc.cluster.local:9092"
 KAFKA_USE_SSL="false"
-JWT_SECRET="c5289cf107d98731d182"
-JWT_SPOT_SECRET="c5289cf107d98731d182"
-pg_password="31695d7b59ea0665ee62"
-POSTGRES_STRING="postgres://postgres:31695d7b59ea0665ee62@postgresql.db.svc.cluster.local:5432/postgres?sslmode=disable"
 REDIS_STRING="redis://redis-master.db.svc.cluster.local:6379"
+FS_CLEAN_HRS="24"
